# AbstractCompiler

./: CMakeLists.txt  abstract.odin  compile.ps1
doc/: fileExtensions.md
include/: CMakeLists.txt
include/Frontend/: Frontend.cpp  Frontend.hpp
include/Helpers/: Logger.hpp
include/Utilities/: CppLanguageInhancement.hpp
include/frontend/: Frontend.hpp
include/lib/: Compiler.hpp  Token.hpp  VirtualMachine.cpp  VirtualMachine.hpp
main/: A++.cpp  CMakeLists.txt  main.cpp
parser/: parser.odin
parser/File/: file.odin
parser/lexer/: lexer.odin
parser/tokenizer/: tokenizer.odin
src/: CMakeLists.txt  Frontend.cpp  Logger.cpp  VirtualMachine.cpp  main.cpp
vm/: vm.odin
